Agregando estilos a conversación

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,7 +16,7 @@
 // automatically applied to the <body> element in the app.
 
 
-button.button-md.button-default, button.button-ios.button-default {
+button.button-md.button-default, button.button-ios.button-default, button.fab.fab-md, button.fab.fab-ios {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#77caeb+0,3ebae8+50,1db3e5+52,77caeb+100 */
   background: #77caeb !important; /* Old browsers */
   background: -moz-linear-gradient(top, #77caeb 0%, #3ebae8 50%, #1db3e5 52%, #77caeb 100%) !important; /* FF3.6-15 */
