--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,4 +2,9 @@ page-home {
   ion-list ion-item h2 {
     display: inline-block !important;
   }
+
+  .contact-offline {
+    background-color: gray;
+    opacity: .5;
+  }
 }
