--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,12 +32,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    (base: #32A255, contrast: #fff),
-  secondary:  #32db64,
+  primary:    (base: #77caeb, contrast: #fff),
+  secondary:  #32A255,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  toolbar:    #3EB3EA
+  facebook:   #3B5998
 );
 
 
