--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,10 @@
   cursor: pointer !important;
 }
 
+.load-spinner {
+  width: 100%;
+  margin-top: 50%;
+}
 
 button.button-md.button-default, button.button-ios.button-default, button.fab.fab-md, button.fab.fab-ios {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#77caeb+0,3ebae8+50,1db3e5+52,77caeb+100 */
