Realizando mejores en el logout

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,7 +15,10 @@
         <span margin-left>{{p.title}}</span>
       </button>
     </ion-list>
-    <hr margin-vertical>
+
+  </ion-content>
+
+  <ion-footer>
     <ion-list>
       <button menuClose ion-item (click)="goToAbout()">
         <ion-icon name="information-circle"></ion-icon>
@@ -26,7 +29,7 @@
         <span margin-left>Logout</span>
       </button>
     </ion-list>
-  </ion-content>
+  </ion-footer>
 
 </ion-menu>
 
