Agregando el modificar perfil, confoguraciones, envío de email y creando el page buscar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,6 +20,10 @@
 
   <ion-footer>
     <ion-list>
+      <button menuClose ion-item (click)="goToSettings()">
+        <ion-icon name="settings"></ion-icon>
+        <span margin-left>Settings</span>
+      </button>
       <button menuClose ion-item (click)="goToAbout()">
         <ion-icon name="information-circle"></ion-icon>
         <span margin-left>About</span>
