--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    (base: #77caeb, contrast: #fff),
+  strong:    (base: #00a8e5, contrast: #fff),
   secondary:  #32A255,
   danger:     #f53d3d,
   light:      #f4f4f4,
