--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
   <ion-content class="background-msn">
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        <ion-icon [name]="p.icon"></ion-icon>
+        <ion-icon color="strong" [name]="p.icon"></ion-icon>
         <span margin-left>{{p.title}}</span>
       </button>
     </ion-list>
@@ -21,15 +21,15 @@
   <ion-footer>
     <ion-list>
       <button menuClose ion-item (click)="goToSettings()">
-        <ion-icon name="settings"></ion-icon>
+        <ion-icon color="strong" name="settings"></ion-icon>
         <span margin-left>Settings</span>
       </button>
       <button menuClose ion-item (click)="goToAbout()">
-        <ion-icon name="information-circle"></ion-icon>
+        <ion-icon color="strong" name="information-circle"></ion-icon>
         <span margin-left>About</span>
       </button>
       <button ion-item (click)="logout()">
-        <ion-icon name="log-out"></ion-icon>
+        <ion-icon color="strong" name="log-out"></ion-icon>
         <span margin-left>Logout</span>
       </button>
     </ion-list>
@@ -38,4 +38,4 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="true"></ion-nav>
+<ion-nav [root]="rootPage" #content></ion-nav>
