--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,7 +25,6 @@
 }
 
 button.button-md.button-default, button.button-ios.button-default, button.fab.fab-md, button.fab.fab-ios {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#77caeb+0,3ebae8+50,1db3e5+52,77caeb+100 */
   background: #77caeb !important; /* Old browsers */
   background: -moz-linear-gradient(top, #77caeb 0%, #3ebae8 50%, #1db3e5 52%, #77caeb 100%) !important; /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #77caeb 0%,#3ebae8 50%,#1db3e5 52%,#77caeb 100%) !important; /* Chrome10-25,Safari5.1-6 */
@@ -50,10 +49,16 @@ button.button-md.button-default.button-md-facebook, button.button-ios.button-def
   background-position-y: 35px;
 }
 
+#avatarLogin {
+  width: 100%;
+}
+
 .avatarFrame {
   text-align: center;
   padding: 6px;
-  border-radius: 50%;
+  border-radius: 10%;
+  width: 35%;
+  margin: 0 auto;
   border: 1px solid rgba(255, 255, 255, 0.36);
   -webkit-box-shadow: 3px 3px 21px 1px rgba(0,0,0,0.75);
   -moz-box-shadow: 3px 3px 21px 1px rgba(0,0,0,0.75);
@@ -61,11 +66,10 @@ button.button-md.button-default.button-md-facebook, button.button-ios.button-def
 }
 
 .avatarFrame img{
-  border-radius: 50%;
+  border-radius: 10%;
 }
 
 .avatarFrame.avatarFrameOnline {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d2ff6b+0,81ff3d+50,0cff00+51,0dbc03+100 */
   background: #d2ff6b; /* Old browsers */
   background: -moz-linear-gradient(top, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #d2ff6b 0%,#81ff3d 50%,#0cff00 51%,#0dbc03 100%); /* Chrome10-25,Safari5.1-6 */
@@ -73,7 +77,6 @@ button.button-md.button-default.button-md-facebook, button.button-ios.button-def
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d2ff6b', endColorstr='#0dbc03',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFrameOffLine {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,eae5e5+45,c1bdbd+47,bab6b6+100 */
   background: #ffffff; /* Old browsers */
   background: -moz-linear-gradient(top, #ffffff 0%, #eae5e5 45%, #c1bdbd 47%, #bab6b6 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #ffffff 0%,#eae5e5 45%,#c1bdbd 47%,#bab6b6 100%); /* Chrome10-25,Safari5.1-6 */
@@ -81,23 +84,20 @@ button.button-md.button-default.button-md-facebook, button.button-ios.button-def
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#bab6b6',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFrameaway {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb76b+0,ffa73d+50,ff7c00+51,ff7f04+100;Orange+Gloss */
-  background: #ffb76b; /* Old browsers */
-  background: -moz-linear-gradient(top, #ffb76b 0%, #ffa73d 50%, #ff7c00 51%, #ff7f04 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb76b', endColorstr='#ff7f04',GradientType=0 ); /* IE6-9 */
+background: #f2ab48; /* Old browsers */
+background: -moz-linear-gradient(top, #f2ab48 0%, #f49200 50%, #f77300 51%, #f2ab48 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #f2ab48 0%,#f49200 50%,#f77300 51%,#f2ab48 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #f2ab48 0%,#f49200 50%,#f77300 51%,#f2ab48 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2ab48', endColorstr='#f2ab48',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFramebusy {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff926b+0,ff5a3d+50,ff0000+51,c10303+100 */
-  background: #ff926b; /* Old browsers */
-  background: -moz-linear-gradient(top, #ff926b 0%, #ff5a3d 50%, #ff0000 51%, #c10303 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #ff926b 0%,#ff5a3d 50%,#ff0000 51%,#c10303 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #ff926b 0%,#ff5a3d 50%,#ff0000 51%,#c10303 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff926b', endColorstr='#c10303',GradientType=0 ); /* IE6-9 */
+  background: #EDA8B0; /* Old browsers */
+  background: -moz-linear-gradient(top, #EDA8B0 0%, #ba2737 50%, #B71D2C 51%, #EF7783 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #EDA8B0 0%,#ba2737 50%,#B71D2C 51%,#EF7783 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #EDA8B0 0%,#ba2737 50%,#B71D2C 51%,#EF7783 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EDA8B0', endColorstr='#EF7783',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFrameappear_offline {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,eae5e5+45,c1bdbd+47,bab6b6+100 */
   background: #ffffff; /* Old browsers */
   background: -moz-linear-gradient(top, #ffffff 0%, #eae5e5 45%, #c1bdbd 47%, #bab6b6 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #ffffff 0%,#eae5e5 45%,#c1bdbd 47%,#bab6b6 100%); /* Chrome10-25,Safari5.1-6 */
