Implementando el recuerdame y verifcando el update

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -84,11 +84,11 @@ button.button-md.button-default.button-md-facebook, button.button-ios.button-def
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#bab6b6',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFrameaway {
-background: #f2ab48; /* Old browsers */
-background: -moz-linear-gradient(top, #f2ab48 0%, #f49200 50%, #f77300 51%, #f2ab48 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #f2ab48 0%,#f49200 50%,#f77300 51%,#f2ab48 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #f2ab48 0%,#f49200 50%,#f77300 51%,#f2ab48 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2ab48', endColorstr='#f2ab48',GradientType=0 ); /* IE6-9 */
+background: #F7DC65; /* Old browsers */
+background: -moz-linear-gradient(top, #F7DC65 0%, #FCD200 50%, #FFB200 51%, #F9D948 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #F7DC65 0%,#FCD200 50%,#FFB200 51%,#F9D948 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #F7DC65 0%,#FCD200 50%,#FFB200 51%,#F9D948 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F7DC65', endColorstr='#F9D948',GradientType=0 ); /* IE6-9 */
 }
 .avatarFrame.avatarFramebusy {
   background: #EDA8B0; /* Old browsers */
